Completed the last challenge and added the certificate

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "projectzero",
+  "homepage": "https://bao88.github.io/ProjectZeroBuild/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
