--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "react-responsive-carousel": "^3.1.30",
+    "react-scripts": "1.0.17",
+    "react-slick": "^0.16.0",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "deploy": "npm run build&&gh-pages -d build",
